fixed header text issue where it covered star on mobile

--- a/base-css.css
+++ b/base-css.css
@@ -62,9 +62,8 @@ font-family: 'Xanh Mono', monospace; */
 
 h1 {
     font-family: 'Bungee Inline', cursive;
-    position: absolute;
-    top: -25px;
-    right: 300px;
+    display: flex;
+    justify-content: center;
 }
 
 aside {
