--- a/light-theme.css
+++ b/light-theme.css
@@ -100,14 +100,14 @@ p {
 }
 
 .card {
-    position: absolute;
+    /* position: absolute;
     left: 50%;
     top: 50%;
     -moz-transform: translate(-50%, -50%)
     -webkit-transform: translate(-50%, -50%)
     -ms-transform: translate(-50%, -50%)
     -o-transform: translate(-50%, -50%)
-    transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%); */
 }
 
 #text-bubble {
